fixed overflow issue

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -82,7 +82,7 @@
   }
 
   html {
-    @apply overflow-hidden
+    @apply overflow-x-hidden
   }
 
   body {
